jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: notebooks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      serviceAccountName: jupyter
      containers:
      - name: jupyter
        image: l1k3d/arenalake-jupyter-spark:1.0
        ports:
        - containerPort: 8888
