jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: notebooks
spec:
  type: NodePort
  selector:
    app: jupyter
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30088-32767
