jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: notebooks
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - arenalake.local
    secretName: arenalake-tls
  rules:
  - host: arenalake.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-public
            port:
              number: 80
